Apply CSS fix to ensure lists display properly on smaller screens; GEOS-2895
git-svn-id: http://svn.codehaus.org/geoserver/trunk/src@12851 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 1f8c78b74d0b4bd0dfbf706801b54267773537d5 [formerly db1dd9f0a46be76902c63d87b376296c9c247473]
Former-commit-id: 9516f90e402b70d0fd689b0969d41acd28bfe5af

--- a/web/core/src/main/java/org/geoserver/web/css/geoserver.css
+++ b/web/core/src/main/java/org/geoserver/web/css/geoserver.css
@@ -119,7 +119,7 @@ display: none;
 }
 
 .wrap {
-width: 83em;
+width: 82em;
 min-width: 80%;
 margin: 0; 
 padding: 0;
